--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,28 +1,39 @@
 plugins {
   id 'com.android.application'
   id 'kotlin-android'
+  id 'kotlin-parcelize'
+  id 'kotlin-kapt'
+  id 'dagger.hilt.android.plugin'
+  id 'androidx.navigation.safeargs'
 }
 
 android {
   compileSdkVersion 30
   buildToolsVersion "30.0.2"
-
   defaultConfig {
     applicationId "com.goyals.smartdubai"
     minSdkVersion 23
     targetSdkVersion 30
     versionCode 1
     versionName "1.0"
-
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
-
   buildTypes {
     release {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
           'proguard-rules.pro'
     }
+    debug {
+      minifyEnabled false
+      shrinkResources false
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+          'proguard-rules-debug.pro', 'proguard-rules.pro'
+    }
+  }
+  buildFeatures {
+    dataBinding = true
   }
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -32,18 +43,48 @@ android {
     jvmTarget = '1.8'
   }
 }
+repositories {
+  jcenter()
+  maven { url "https://jitpack.io" }
+}
 
 dependencies {
-
+  //Designs
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation 'androidx.core:core-ktx:1.3.2'
-  implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'com.google.android.material:material:1.3.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-  implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
-  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
-  testImplementation 'junit:junit:4.+'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+  implementation "androidx.core:core-ktx:$androidx_version"
+  implementation "androidx.appcompat:appcompat:$appcompat_version"
+  implementation "com.google.android.material:material:$material_version"
+  implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+
+  //Navigation
+  implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+  implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+
+  //Lifecycle
+  implementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
+  implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extension_version"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+  implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+  //Networking
+  implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+  implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+  implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+  implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+  implementation "com.google.code.gson:gson:$gson_version"
+  implementation "com.github.bumptech.glide:glide:$glide_version"
+  kapt "com.github.bumptech.glide:compiler:$glide_version"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+
+  // dagger - Hilt
+  implementation "com.google.dagger:hilt-android:$hilt_version"
+  kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+  implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewmodel_version"
+  kapt "androidx.hilt:hilt-compiler:$hilt_viewmodel_version"
+
+  //test cases
+  testImplementation "junit:junit:$junit_version"
+  androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+  androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 }
