--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,35 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-  ext.kotlin_version = "1.4.30"
+  ext {
+    androidx_version = "1.3.2"
+    appcompat_version = "1.2.0"
+    constraint_layout_version = "2.0.4"
+    coroutine_version = "1.3.7"
+    espresso_version = "3.3.0"
+    glide_version = "4.11.0"
+    gradle_version = "4.1.2"
+    gson_version = "2.8.6"
+    junit_ext_version = "1.1.2"
+    junit_version = "4.13.2"
+    kotlin_version = "1.4.30"
+    material_version = "1.3.0"
+    hilt_version = "2.31-alpha"
+    hilt_viewmodel_version = "1.0.0-alpha03"
+    legacy_support_version = "1.0.0"
+    lifecycle_extension_version = "2.2.0"
+    lifecycle_version = "2.3.0"
+    navigation_version = "2.3.4"
+    okhttp_version = "4.5.0"
+    retrofit_version = "2.9.0"
+  }
   repositories {
     google()
     jcenter()
   }
   dependencies {
-    classpath "com.android.tools.build:gradle:4.1.2"
+    classpath "com.android.tools.build:gradle:$gradle_version"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
+    classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+    classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
   }
 }
 
@@ -18,6 +37,7 @@ allprojects {
   repositories {
     google()
     jcenter()
+    maven { url "https://jitpack.io" }
   }
 }
 
