--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.goyals.smartdubai">
 
+  <uses-permission android:name="android.permission.INTERNET" />
   <application
       android:name=".SmartDubai"
       android:allowBackup="true"
@@ -9,7 +10,8 @@
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/Theme.SmartDubai">
+      android:theme="@style/Theme.SmartDubai"
+      android:usesCleartextTraffic="true">
     <activity android:name=".view.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
