--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,6 @@ dependencies {
 
   //test cases
   testImplementation "junit:junit:$junit_version"
-  androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
-  androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+  testImplementation "org.mockito:mockito-core:$mockito_version"
+  testImplementation "androidx.arch.core:core-testing:$androidx_core_test_version"
 }
