--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
   ext {
+    androidx_core_test_version = "2.1.0"
     androidx_version = "1.3.2"
     appcompat_version = "1.2.0"
+    archCoreTest = "2.1.0"
     constraint_layout_version = "2.0.4"
+    coroutineTest = '1.3.5'
     coroutine_version = "1.3.7"
+    coroutine_test_version = "1.3.5"
     espresso_version = "3.3.0"
     glide_version = "4.11.0"
     gradle_version = "4.1.2"
@@ -17,9 +21,12 @@ buildscript {
     legacy_support_version = "1.0.0"
     lifecycle_extension_version = "2.2.0"
     lifecycle_version = "2.3.0"
+    mockito_version = "3.3.3"
     navigation_version = "2.3.4"
     okhttp_version = "4.5.0"
+    okhttp_mock_version = "4.7.2"
     retrofit_version = "2.9.0"
+    retrofit_coroutine_version = "0.9.2"
   }
   repositories {
     google()
